# numsim

./: .gitignore  CMakeLists.txt  README.txt  calculator  channelStep  channelStep.txt  city  cityOutlet  galton  galton.txt  labyrinth  labyrinth.txt  numsim  numsimFlow  numsimFlowTemperature  parameters.txt  praese.pptx  rayleighBenard  roundFluid.txt  standardForms  temp_p2.txt  vortex  vortex.txt  zipper  ~$praese.pptx
VTK-build/: CMakeCache.txt  CTestCustom.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  VTKData_config.cmake  cmake_install.cmake  install_manifest.txt  modules.dot  modules.json  unix_path.sh  vtk-config-version.cmake  vtk-config.cmake
VTK-build/Charts/Core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Common/Color/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Common/ComputationalGeometry/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Common/Core/: CTestTestfile.cmake  Makefile  cmake_install.cmake  vtkLegacy.h  vtkVersionMacros.h
VTK-build/Common/DataModel/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Common/ExecutionModel/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Common/Math/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Common/Misc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Common/System/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Common/Transforms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Domains/Chemistry/: CTestTestfile.cmake  Makefile  cmake_install.cmake  vtkChemistryConfigure.h
VTK-build/Filters/AMR/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Extraction/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/FlowPaths/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/General/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Generic/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Geometry/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Hybrid/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/HyperTree/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Imaging/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Modeling/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Parallel/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/ParallelImaging/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Points/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Programmable/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/SMP/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/Filters/Selection/: Makefile  (+2 more)
VTK-build/Remote/: CTestTestfile.cmake  Makefile  cmake_install.cmake
VTK-build/lib/: libvtkCommonColor-9.0.so.9.0.0  libvtkCommonComputationalGeometry-9.0.so.9.0.0  libvtkCommonMath-9.0.so.9.0.0  libvtkCommonMisc-9.0.so.9.0.0  libvtkCommonSystem-9.0.so.9.0.0  libvtkCommonTransforms-9.0.so.9.0.0  libvtkDICOMParser-9.0.so.9.0.0  libvtkDomainsChemistry-9.0.so.9.0.0  libvtkFiltersAMR-9.0.so.9.0.0  libvtkFiltersGeneric-9.0.so.9.0.0  libvtkFiltersHyperTree-9.0.so.9.0.0  libvtkFiltersImaging-9.0.so.9.0.0  libvtkFiltersParallelImaging-9.0.so.9.0.0  libvtkFiltersProgrammable-9.0.so.9.0.0  libvtkFiltersSMP-9.0.so.9.0.0  libvtkFiltersSelection-9.0.so.9.0.0  libvtkFiltersTexture-9.0.so.9.0.0  libvtkFiltersTopology-9.0.so.9.0.0  libvtkFiltersVerdict-9.0.so.9.0.0  libvtkGeovisCore-9.0.so.9.0.0  libvtkIOAMR-9.0.so.9.0.0  libvtkIOAsynchronous-9.0.so.9.0.0  libvtkIOCONVERGECFD-9.0.so.9.0.0  libvtkIOCityGML-9.0.so.9.0.0  libvtkIOCore-9.0.so.9.0.0  libvtkIOEnSight-9.0.so.9.0.0  libvtkIOExportGL2PS-9.0.so.9.0.0  libvtkIOExportPDF-9.0.so.9.0.0  libvtkIOImport-9.0.so.9.0.0  libvtkIOInfovis-9.0.so.9.0.0  libvtkIOLSDyna-9.0.so.9.0.0  libvtkIOLegacy-9.0.so.9.0.0  libvtkIOMINC-9.0.so.9.0.0  libvtkIOMotionFX-9.0.so.9.0.0  libvtkIOMovie-9.0.so.9.0.0  libvtkIONetCDF-9.0.so.9.0.0  libvtkIOOggTheora-9.0.so.9.0.0  libvtkIOPLY-9.0.so.9.0.0  libvtkIOParallel-9.0.so.9.0.0  libvtkIOParallelXML-9.0.so.9.0.0  (+57 more)
cases/: channelStep.txt  channelStepLikeNumsim.txt  city.txt  cityOutlet.txt  galton.txt  galtonLevel8.txt  heatedTriangle.txt  labyrinth.txt  numsim.txt  numsimFlow.txt  numsimFlowTemperature.txt  parameters.txt  rayleighBenard.txt  standardForms.txt  vortex.txt
comparing/: main.cpp:Zone.Identifier
comparing/reference/: output_0000.vti  output_0001.vti  output_0002.vti  output_0003.vti  output_0004.vti  output_0005.vti  output_0006.vti  output_0007.vti  output_0008.vti  output_0009.vti
includes/: array2d.h  central_differences.h  discretization.h  donor_cell.h  field_variable.h  gauss_seidel.h  mesh.h  output_writer.h  output_writer.h:Zone.Identifier  output_writer_paraview.h  output_writer_paraview_parallel.h  output_writer_text.h  partitioning.h  settings.h  solver.h  sor.h  staggered_grid.h  values.h
includes/output_writer/: output_writer.h  output_writer_paraview.h
src/: CMakeLists.txt  array2d.cpp  central_differences.cpp  discretization.cpp  donor_cell.cpp  field_variable.cpp  gauss_seidel.cpp  main.cpp  mesh.cpp  partitioning.cpp  settings.cpp  solver.cpp  sor.cpp  staggered_grid.cpp  temp_p2.txt
src/output_writer/: output_writer.cpp  output_writer_paraview.cpp  output_writer_paraview_parallel.cpp  output_writer_text.cpp  output_writer_text_parallel.cpp
this/src/: main.cpp
videos-pics/city/: cityT.mov
videos-pics/cityOutlet/: cityOutletT.mov
videos-pics/heatedTriangle/: heatedTriangleT.mov
videos-pics/labyrinth/: labyrinth.mov  labyrinthT.mov
videos-pics/numsim/: numsim.mov
videos-pics/numsimFlow/: numsimFlow.mov
videos-pics/numsimFlowTemperature/: numsimFlowTemperature.mov
videos-pics/standardForms/: standardForms.mov
videos-pics/vortex/: vortex.mov
(+354 files in other folders)
